c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/char_and_uchar_conflict.c
/* char and unsigned char are different types; you can't use them
 * interchangeably when redeclaring the same identifier */
int foo(unsigned char c) {
    return c;
}

int main(void) {
    return foo(0);
}

// This redeclares foo with a different type than before
int foo(char c);